# slicerClaw

./: .gitignore  .slicer_project_memory.md  CMakeLists.txt  LICENSE  README.md  README_zh-CN.md  slicerClaw.py
SlicerClaw/: CMakeLists.txt  SlicerClaw.py
SlicerClaw/Resources/: slicer_mcp_bridge.py
